--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,3 +1,13 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+
+.toggle-checkbox:checked {
+    right: 0;
+    border-color: #68d391;
+}
+
+.toggle-checkbox:checked + .toggle-label {
+    background-color: #68d391;
+}
